fix: 실종 정보를 가져올 때 해당 애완동물의 이미지를 가져오도록 수정